Version <release> - <codename> released on <releaseDate>

New Hardware Support
- Motorola RF Switches (Wireless Controllers)
- 3Com Switches 4200G, E4800G and E5500G now supports MAC Authentication and 
  802.1X

New Features
- User-Agent violation support completely re-written. It is now easier than 
  ever to block devices or old browsers from your network. (#769, #1192)
- Kerberos Authentication on the Captive Portal (Thanks to Brad Lhotsky from 
  NIH)

Enhancements
- 3Com Super Stack 4500 now uses SNMP for MAC authorization (port-security)
- DHCP fingerprints sharing now allows submitter to send computer name, user-
  agent and a contact email to help us identify the devices better (#983)
- Updated Developer documentation regarding how to support new wireless hardware
- Meru module now supports firmware version identification
- Improvements in the logrotate script (#1198)
- MAC address format xxxx-xxxx-xxxx supported in our FreeRADIUS' module
- New DHCP fingerprint for Cisco SPA series IP Phone, Mikrotik, Freebox,
  AeroHive Hive AP, Ubuntu Server, Suse Linux Desktop 11, Synology NAS, Polycom
  Conference IP Phone and Generic Intel PXE
- VoIP autodetection in Wired 802.1X and Wired MAC Authentication can now use 
  CDP / LLDP if available (#1175)
- Improvement to the samba configuration provided in the administration guide
  to fix uid mapping issues (#1205)

Bug Fixes
- Fixed an important problem with VoIP in Wired 802.1X and Wired MAC 
  Authenication modes (#1202)
- Fixed important Nortel support regressions (introduced in 2.1.0: #1183, #1195)
- Wired 802.1X and MAC Authentication fixes in Network Devices Guide
- Fixed an issue with pfcmd-initiated VLAN re-evaluation if you assign VLANs 
  based on a client's connection-type (which is not the default)
- Fixed broken person lookups if username is an email address (#1206)
- Fixed DHCP fingerprint sharing upload form
- Fixed Web Admin which referred to an inexistent Meru MC3000 module (it was 